2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace the last malloc() with new[] operator.

	* src/convutil.cpp (ConvPrint()):
	  - Replace malloc() call with C++ new[] operator.
	  - Remove now-unneeded stdlib.h include.
	* configure.ac:
	  - Remove unnecessary check for malloc.h.

2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove unnecessary check for unused strstr().

	* configure.ac:
	  - Remove check for strstr(), which is never used.

2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove the dead midatrie stuffs.

	* configure.ac:
	  - Remove comment lines for using midatrie. It has been dead.
	  - Move the datrie check up to library checks phase.

2017-11-28  Theppitak Karoonboonyanan <theppitak@gmail.com>

	* NEWS:
	  === Version 0.6.0 ===

2017-11-27  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Revise manpage.

	* src/swath.1:
	  - Improve wordings.
	  - Mention trietool(1) instead of trietool-0.2(1).

2017-11-26  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove LinkSep terminator.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Remove LinkSep[] terminator assignment, which was previously
	    required by ReverseLinkSep(), where LinkSep[] was processed
	    from start to end.

2017-11-24  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Merge loop in MaxWordSeg::saveSegment().

	* src/maxwordseg.cpp (MaxWordSeg::saveSegment()):
	  - Optimize array access using pointers.
	  - Merge extra iteration on the last element into the main loop,
	    checking for the terminator so iteration over the last
	    element is possible, and the split of the last element copying
	    from the rests before it is not necessary.

2017-11-23  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Only reverse word list on Thai chunks.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Add word list reversion when a Thai chunk is done.
	    Other chunks don't need it.